@@ -1,65 +1,58 @@
 plugins {
-  id "com.hkmc.h2" version "1.0.105"
+  id "java"
+  id "com.google.cloud.tools.jib" version "3.3.1"
 }
 
 group = "com.hkmc.ccs"
-version = "1.0.35"
+version = "1.0.35.M-1"
 
-cloudnative {
-  microservice {
-    openfeign = true
+repositories {
+  mavenLocal()
+  maven {
+    url "https://package-int.hcloud.hmc.co.kr/repository/maven-public/"
   }
-
-  persistent {
-    jpa = true
-    postgresql = true
-  }
-
-  thirdparty {
-    commonsLang = true
-    commonsCollections = true
-    prometheusRSocket = true
-    jasypt = true
-  }
-
-  cicd {
-    container {
-      enabled = true
-      to = "registry.hcloud.hmc.co.kr/ccs/${project.name}"
-      //jvmOption = "-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:InitialRAMPercentage=50 -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=75"
-    }
-
-    helm {
-      name = "metering"
-      namespace = "metering"
-      serviceType = "ClusterIP"
-      servicePort = 8080
-
-      requestsMem = "3Gi"   // k8s request resource memory 설정
-      requestsCpu = "500m"  // k8s request resource cpu 설정 0.5 Core
-
-      limitsMem = "3Gi"  // requestMem 와 같게 설정
-      limitsCpu = "500m" // 1 Core (멀티 프로세스 활용한 코딩을 진행하지 않았다면 1Core 사용)
-
-    }
-
-    deploy {
-      oldStyleNaming = true    // 기존 argocd 파이프라인 네이밍 방식 , false 하게 되면 downtime 발생되어 무조건 true!!
-      strategy = "BLUE-GREEN" // or ROLLING-UPDATE
-
-      targets = [
-              [region: "ap-northeast", target: "dev", min: 1, max: 1],
-//      [region: "ap-northeast", target: "stg", min: 1, max: 1],
-//      [region: "ap-northeast", target: "prd", min: 16, max: 16]
-      ]
-
-    }
-  }
+  mavenCentral()
 }
 
 dependencies {
   testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
-  implementation 'org.springframework.boot:spring-boot-starter-validation'
-  implementation 'io.micrometer:micrometer-registry-statsd:1.9.2'
-  implementation group: 'co.elastic.apm', name: 'elastic-apm-agent', version: '1.34.1'
+
+  implementation (platform('com.ccs-sre-team:parent:1.0.7')) {
+    exclude module: 'commons-mongodb'
+    exclude module: 'spring-boot-starter-data-mongodb'
+    exclude module: 'spring-boot-starter-data-mongodb-reactive'
+    exclude module: 'spring-data-mongodb-encrypt'
+    exclude module: 'de.flapdoodle.embed.mongo'
+    exclude module: 'commons-r2dbc'
+  }
+
+
+
+  annotationProcessor 'org.projectlombok:lombok:1.18.26'
+  testCompileOnly 'org.projectlombok:lombok:1.18.26'
+  testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+}
+
+
+jib {
+  from {
+    image = "registry.hcloud.hmc.co.kr/ccs/graalvm-ce:ol9-java17-22.3.0"
+  }
+  to {
+    allowInsecureRegistries = true
+    image = "registry.hcloud.hmc.co.kr/ccs/${project.name}"
+    auth {
+      username = "e679127"
+      password = "3b25ym8plS"
+    }
+    tags = ["${project.version}"]
+  }
+  container {
+  }
+}
+
+
+test {
+  useJUnitPlatform()
 }
